[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "externTest"
version = "1.0.0"
authors = [
    { name="LucasAmmer", email="me@LucasAmmer.com" },
]
description = "Testing library for external executables."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[porject.urls]
Homepage = "https://github.com/riley0122/externTest"
Issues = "https://github.com/riley0122/externTest/issues"